# ProtractorPlus

./: .gitignore  CHANGELOG.md  Cargo.toml  FIXED_BUILD.md  README.md  SIGNING.md  THIRD_PARTY_NOTICE.md  UPLOAD_TO_GITHUB.md  build.rs  build_release.bat
.github/workflows/: build-windows.yml
assets/: splash_icon.rgba  window_icon.rgba
src/: box_overlay.rs  distance.rs  draw.rs  icon.rs  main.rs  splash.rs  text.rs  win32_layered.rs
