[package]
name = "protractor_plus"
version = "3.2.1"
edition = "2021"
description = "Always-on-top transparent angle-measuring overlay for Windows"
license = "GPL-3.0-only"

[[bin]]
name = "ProtractorPlus"
path = "src/main.rs"

[dependencies]
winit = "=0.30.13"
tiny-skia = "=0.11.4"
fontdue = "=0.9.3"
raw-window-handle = "=0.6.2"
windows = { version = "=0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[build-dependencies]
google-fonts = "=0.1.5"
winresource = "=0.1.31"
